start using graalvm, automation for desktop, fixes